# project-chronos

./: .flake8  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHRONOS_PAPER_v2.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai_brain.py  benchmark.py  chronos_agent.py  codecov.yml  config.py  docker-compose.yml  drand_client.py  exceptions.py  fetch_ci_status.py  fhe_engine.py  get-pip.py  hardhat.config.js  index.html  interfaces.py  logger.py  memory_sanitizer.py  mypy.ini  package.json  pitch_deck.html  pitch_deck.md  posw.py  pyproject.toml  real_results.md  release-please-config.json  requirements.txt  runs.json  stress_test.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: chronos-benchmark-bot.yml  codeql.yml  deploy-sepolia.yml  force-bot-commit.yml  pr-agent.yml  qa.yml  release-please.yml  rust-qa.yml  snyk.yml  stale.yml
chronos-bot/: .pr_agent.toml
chronos-rust/: Cargo.toml
chronos-rust/chronos-agent/: CHANGELOG.md  Cargo.toml
chronos-rust/chronos-agent/src/: main.rs
chronos-rust/chronos-core/: CHANGELOG.md  Cargo.toml
chronos-rust/chronos-core/src/: lib.rs  memory.rs  tamper.rs
chronos-rust/chronos-crypto/: CHANGELOG.md  Cargo.toml  Cargo.toml.bak
chronos-rust/chronos-crypto/src/: fhe.rs  lib.rs  posw.rs  snark.rs  vdf.rs
chronos-rust/chronos-dashboard/: CHANGELOG.md  Cargo.toml  index.html
chronos-rust/chronos-dashboard/src/: main.rs
chronos-rust/chronos-ebpf/: CHANGELOG.md  Cargo.toml
chronos-rust/chronos-ebpf/src/: lib.rs
chronos-rust/chronos-net/: CHANGELOG.md  Cargo.toml
chronos-rust/chronos-net/src/: drand.rs  lib.rs  p2p.rs
contracts/: ChronosStaking.sol  ChronosVerifier.sol
security/: __init__.py  anti_tamper.py  secure_string.py
tests/: conftest.py  test_anti_tamper.py  test_chronos_agent.py  test_drand_client.py  test_e2e_lifecycle.py  test_fhe.py  test_memory_sanitizer.py  test_posw.py  test_secure_string.py
