[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "project-chronos"
version = "1.0.0"
description = "Compositional architecture for ephemeral FHE agents with VDF time-locking and attestable software erasure"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shashank Kumar", email = "shashankchoudhary792@gmail.com" }
]
keywords = ["fhe", "vdf", "snark", "cryptography", "ephemeral-agents", "zero-knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<0.29",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.13,<3.0",
    "cryptography>=46.0,<47.0",
    "py_ecc>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-cov>=7.0,<8.0",
    "pytest-mock>=3.15,<4.0",
    "black>=26.0,<27.0",
    "flake8>=7.3,<8.0",
    "isort>=8.0,<9.0",
    "mypy>=1.19,<2.0",
    "bandit>=1.9,<2.0",
]
fast = [
    # gmpy2 provides 10-100x speedup for Paillier modular exponentiation.
    # Optional because it requires GMP system library headers to compile.
    "gmpy2>=2.1,<3.0",
]

[project.scripts]
chronos = "chronos_agent:asyncio.run(_async_main())"

[project.urls]
Homepage = "https://github.com/sidthebuilder/project-chronos"
Repository = "https://github.com/sidthebuilder/project-chronos"
"Bug Tracker" = "https://github.com/sidthebuilder/project-chronos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronos*", "security*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.black]
line-length = 95
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 95

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — legitimate in test modules
