[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-chronos"
version = "1.0.0"
description = "Compositional architecture for ephemeral FHE agents with VDF time-locking and attestable software erasure"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Shashank Kumar", email = "shashankchoudhary792@gmail.com" }
]
keywords = ["fhe", "vdf", "snark", "cryptography", "ephemeral-agents", "zero-knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "cryptography>=42.0,<47.0",
    "py_ecc>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
    "mypy>=1.0",
    "bandit>=1.9.4",
]
fast = [
    # gmpy2 provides 10-100x speedup for Paillier modular exponentiation.
    # Optional because it requires GMP system library headers to compile.
    "gmpy2>=2.1,<3.0",
]

[project.scripts]
chronos = "chronos_agent:main"

[project.urls]
Homepage = "https://github.com/sidthebuilder/project-chronos"
Repository = "https://github.com/sidthebuilder/project-chronos"
"Bug Tracker" = "https://github.com/sidthebuilder/project-chronos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronos*", "security*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.black]
line-length = 95
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 95

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — legitimate in test modules
