[workspace]
members = [
    "chronos-core",
    "chronos-crypto",
    "chronos-net",
    "chronos-agent"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
sha2 = "0.11"
hex = "0.4"
kzen-paillier = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2"
curve25519-dalek = "4"
rand = "0.8"
