[package]
name = "chronos-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
chronos-core = { path = "../chronos-core" }
chronos-crypto = { path = "../chronos-crypto" }
chronos-net = { path = "../chronos-net" }
tokio.workspace = true
anyhow.workspace = true
sha2.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ark-ff = "0.4.0"
ark-bls12-381 = "0.4.0"
rand.workspace = true
hex.workspace = true
libp2p = { version = "0.53", features = ["tokio", "macros"] }
