[package]
name = "chronos-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
ebpf = ["dep:aya"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
hex.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
aya = { version = "0.14.0", optional = true }

[lib]
name = "fast_memory"
crate-type = ["rlib", "cdylib"]

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[dependencies.zeroize]
version = "1.8"
features = ["zeroize_derive"]
