[package]
name = "chronos-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
ebpf = ["dep:aya"]

[dependencies]
tokio.workspace = true
anyhow.workspace = true
hex.workspace = true
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
aya = { version = "0.14.0", optional = true }

[lib]
name = "chronos_core"
crate-type = ["rlib"]
