[package]
name = "chronos-crypto"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = ["tfhe/gpu"]

[dependencies]
sha2.workspace = true
num-bigint = { workspace = true, features = ["rand"] }
num-traits.workspace = true
curve25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
tfhe = { version = "0.7", features = ["integer"] }
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-std = "0.4.0"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[lib]
name = "fast_posw"
crate-type = ["rlib", "cdylib"]
