[package]
name = "chronos-dashboard"
version = "0.1.0"
edition = "2021"
description = "Chronos WASM Dashboard for visualizing TFHE Neural Network execution"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
