[package]
name = "chronos-net"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.37", features = ["full"] }
rdrand = "0.8.3"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
hex.workspace = true
